--- a/.cycloid.yml
+++ b/.cycloid.yml
@@ -20,7 +20,7 @@ config:
       path: 'pipeline/pipeline.yml'
     variables:
       path: 'pipeline/variables.sample.yml'
-      destination: '($ project $)/pipeline/variables-($ environment $).yml'
+      destination: '($ project $)/pipeline/variables-($ environment $)/pipleline_var.yml'
 
   # Configuration of terraform to setup the infrastructure
   terraform:
