--- a/.forms.yml
+++ b/.forms.yml
@@ -129,6 +129,46 @@ default:
         default: welcome@1234
         required: true
 
+      - name: Bastion url
+        key: "bastion_url"
+        widget: simple_text
+        type: string
+        description: "Bastion url"
+        default: cloud@52.168.138.26
+        required: true
+
+      - name: Azure Bastion key
+        key: "azure_bastion_key"
+        widget: cy_cred
+        type: string
+        description: "Azure Bastion key"
+        default: "((git_abhay-azure-ssh.ssh_key))"
+        required: true
+
+      - name: Ansible remote user
+        key: "ansible_remote_user"
+        widget: simple_text
+        type: string
+        description: "ansible_remote_user"
+        default: platon
+        required: true
+
+      - name: Ansible vault password
+        key: "ansible_vault_password"
+        widget: simple_text
+        type: string
+        description: "Ansible vault password"
+        default: orange123
+        required: true
+
+      - name: Azure default region
+        key: "azure_default_region"
+        widget: simple_text
+        type: string
+        description: "azure_default_region"
+        default: East US
+        required: true
+
     Terraform:
       - name: "Win RDP create"
         key: win_rdp_create
